--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 <meta content='width=1100' name='viewport'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='blogger' name='generator'/>
-<link href='https://wfu-taipei.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
-<link href='http://wfu-taipei.blogspot.com/' rel='canonical'/>
-<link rel="alternate" type="application/atom+xml" title="FB MAC 台北 - Atom" href="https://wfu-taipei.blogspot.com/feeds/posts/default" />
-<link rel="alternate" type="application/rss+xml" title="FB MAC 台北 - RSS" href="https://wfu-taipei.blogspot.com/feeds/posts/default?alt=rss" />
-<link rel="service.post" type="application/atom+xml" title="FB MAC 台北 - Atom" href="https://www.blogger.com/feeds/7016785836288137597/posts/default" />
+<link href='https://music.wfuapp.com/favicon.ico' rel='icon' type='image/x-icon'/>
+<link href='http://music.wfuapp.com/' rel='canonical'/>
+<link rel="alternate" type="application/atom+xml" title="一整天的音樂 - Atom" href="https://music.wfuapp.com/feeds/posts/default" />
+<link rel="alternate" type="application/rss+xml" title="一整天的音樂 - RSS" href="https://music.wfuapp.com/feeds/posts/default?alt=rss" />
+<link rel="service.post" type="application/atom+xml" title="一整天的音樂 - Atom" href="https://www.blogger.com/feeds/7016785836288137597/posts/default" />
 <link rel="me" href="https://www.blogger.com/profile/14581104808337447386" />
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
-<meta content='http://wfu-taipei.blogspot.com/' property='og:url'/>
-<meta content='FB MAC 台北' property='og:title'/>
-<meta content='' property='og:description'/>
+<meta content='http://music.wfuapp.com/' property='og:url'/>
+<meta content='一整天的音樂' property='og:title'/>
+<meta content='YOUTUBE ‧ 音樂直播 ‧ 自訂歌單 ‧ 24小時熱門歌曲 ‧ 音樂不中斷' property='og:description'/>
 <!-- Facebook og 與 Google meta 設定 begin-->
 <meta content='100006369483329' property='fb:admins'/>
 <meta content='457090704320517' property='fb:app_id'/>
-<meta content='FB MAC 台北' property='og:site_name'/>
+<meta content='一整天的音樂' property='og:site_name'/>
 <meta content='website' property='og:type'/>
-<meta content='FB MAC 台北' property='og:title'/>
+<meta content='一整天的音樂' property='og:title'/>
 <meta content='https://1.bp.blogspot.com/-zoblwxkpi3M/YH0pD2pY_yI/AAAAAAAAjyg/3N4gJbzdqIk20PXuw_oY_B2VmtXfUClpACNcBGAsYHQ/s0/music.jpg' property='og:image'/>
 <meta content='https://www.facebook.com/wayne.fu.blogger' property='article:author'/>
 <!-- Facebook og 設定 end-->
@@ -33,7 +33,7 @@
 </script>
 <!-- -->
 <title>
-FB MAC 台北
+一整天的音樂
 </title>
 <!--mobile shortcut icon-->
 <link href='https://1.bp.blogspot.com/-bgCMUPCfoKA/YEL0gUO6foI/AAAAAAAAjno/DQKgoc_m8O4EYsPYqpozFwq4AKkONW_DwCNcBGAsYHQ/s0/music.png' rel='apple-touch-icon'/>
@@ -541,7 +541,7 @@ if (isMobile){(adsbygoogle = window.adsbygoogle || []).push({google_ad_client: '
       gapi.load("gapi.iframes:gapi.iframes.style.bubble", function() {
         if (gapi.iframes && gapi.iframes.getContext) {
           gapi.iframes.getContext().openChild({
-              url: 'https://www.blogger.com/navbar.g?targetBlogID\x3d7016785836288137597\x26blogName\x3dFB+MAC+%E5%8F%B0%E5%8C%97\x26publishMode\x3dPUBLISH_MODE_BLOGSPOT\x26navbarType\x3dLIGHT\x26layoutType\x3dLAYOUTS\x26searchRoot\x3dhttps://wfu-taipei.blogspot.com/search\x26blogLocale\x3den\x26v\x3d2\x26homepageUrl\x3dhttps://wfu-taipei.blogspot.com/\x26vt\x3d-8089011880922892338',
+              url: 'https://www.blogger.com/navbar.g?targetBlogID\x3d7016785836288137597\x26blogName\x3dFB+MAC+%E5%8F%B0%E5%8C%97\x26publishMode\x3dPUBLISH_MODE_BLOGSPOT\x26navbarType\x3dLIGHT\x26layoutType\x3dLAYOUTS\x26searchRoot\x3dhttps://music.wfuapp.com/search\x26blogLocale\x3den\x26v\x3d2\x26homepageUrl\x3dhttps://music.wfuapp.com/\x26vt\x3d-8089011880922892338',
               where: document.getElementById("navbar-iframe-container"),
               id: "navbar-iframe"
           });
@@ -563,7 +563,7 @@ head.appendChild(script);
 <div class='header section' id='header'><div class='widget Header' data-version='1' id='Header1'>
 <div id='header-inner'>
 <div class='titlewrapper'>
-<h1 class='web_title'><a class='decoration' href='https://wfu-taipei.blogspot.com/'>
+<h1 class='web_title'><a class='decoration' href='https://music.wfuapp.com/'>
 <span class='header_symbol'>Music</span> 一整天的音樂
 			</a></h1>
 <div class='descriptionwrapper'>
@@ -588,7 +588,7 @@ head.appendChild(script);
 <div class='mobile_menu_btn'>
 <i class='fa fa-bars'></i>
 </div>
-<h1 class='web_title'><a class='decoration' href='https://wfu-taipei.blogspot.com/'><span class='header_symbol'>Music</span><span class='header_text'> 一整天的音樂</span></a></h1>
+<h1 class='web_title'><a class='decoration' href='https://music.wfuapp.com/'><span class='header_symbol'>Music</span><span class='header_text'> 一整天的音樂</span></a></h1>
 <div class='mobile_search_icon'>
 <i class='fa fa-search'></i>
 </div>
@@ -660,7 +660,7 @@ head.appendChild(script);
 <div class='post'>
 <a name='6111952738034941505'></a>
 <h1 class='post-title entry-title'>
-<a href='https://wfu-taipei.blogspot.com/2020/01/blog-post_03.html'>一整天的音樂 群組分類</a>
+<a href='https://music.wfuapp.com/2020/01/blog-post_03.html'>一整天的音樂 群組分類</a>
 </h1>
 <span class='item-control blog-admin pid-1039888222'>
 <a href='https://www.blogger.com/post-edit.g?blogID=7016785836288137597&postID=6111952738034941505&from=pencil' title='Edit Post'>
@@ -1111,8 +1111,8 @@ document.body.className = document.body.className.replace('loading', '');
 
 <script type="text/javascript" src="https://www.blogger.com/static/v1/widgets/1380559502-widgets.js"></script>
 <script type='text/javascript'>
-window['__wavt'] = 'AOuZoY61GbrPCcLBhIAlX9LADA3bsuIoLw:1712146706164';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d7016785836288137597','//wfu-taipei.blogspot.com/','7016785836288137597');
-_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '7016785836288137597', 'title': 'FB MAC \u53f0\u5317', 'url': 'https://wfu-taipei.blogspot.com/', 'canonicalUrl': 'http://wfu-taipei.blogspot.com/', 'homepageUrl': 'https://wfu-taipei.blogspot.com/', 'searchUrl': 'https://wfu-taipei.blogspot.com/search', 'canonicalHomepageUrl': 'http://wfu-taipei.blogspot.com/', 'blogspotFaviconUrl': 'https://wfu-taipei.blogspot.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': false, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'en', 'localeUnderscoreDelimited': 'en', 'languageDirection': 'ltr', 'isPrivate': true, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - Atom\x22 href\x3d\x22https://wfu-taipei.blogspot.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - RSS\x22 href\x3d\x22https://wfu-taipei.blogspot.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/7016785836288137597/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/14581104808337447386\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/ad07a4148a3f0038', 'plusOneApiSrc': 'https://apis.google.com/js/platform.js', 'disableGComments': true, 'interstitialAccepted': false, 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': false, 'jumpLinkMessage': 'Read more', 'pageType': 'index', 'pageName': '', 'pageTitle': 'FB MAC \u53f0\u5317'}}, {'name': 'features', 'data': {}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard!', 'ok': 'Ok', 'postLink': 'Post Link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'FB MAC \u53f0\u5317', 'description': '', 'url': 'https://wfu-taipei.blogspot.com/', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': true, 'isArchive': false, 'isLabelSearch': false}}]);
+window['__wavt'] = 'AOuZoY61GbrPCcLBhIAlX9LADA3bsuIoLw:1712146706164';_WidgetManager._Init('//www.blogger.com/rearrange?blogID\x3d7016785836288137597','//music.wfuapp.com/','7016785836288137597');
+_WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '7016785836288137597', 'title': 'FB MAC \u53f0\u5317', 'url': 'https://music.wfuapp.com/', 'canonicalUrl': 'http://music.wfuapp.com/', 'homepageUrl': 'https://music.wfuapp.com/', 'searchUrl': 'https://music.wfuapp.com/search', 'canonicalHomepageUrl': 'http://music.wfuapp.com/', 'blogspotFaviconUrl': 'https://music.wfuapp.com/favicon.ico', 'bloggerUrl': 'https://www.blogger.com', 'hasCustomDomain': false, 'httpsEnabled': true, 'enabledCommentProfileImages': true, 'gPlusViewType': 'FILTERED_POSTMOD', 'adultContent': false, 'analyticsAccountNumber': '', 'encoding': 'UTF-8', 'locale': 'en', 'localeUnderscoreDelimited': 'en', 'languageDirection': 'ltr', 'isPrivate': true, 'isMobile': false, 'isMobileRequest': false, 'mobileClass': '', 'isPrivateBlog': false, 'isDynamicViewsAvailable': true, 'feedLinks': '\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - Atom\x22 href\x3d\x22https://music.wfuapp.com/feeds/posts/default\x22 /\x3e\n\x3clink rel\x3d\x22alternate\x22 type\x3d\x22application/rss+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - RSS\x22 href\x3d\x22https://music.wfuapp.com/feeds/posts/default?alt\x3drss\x22 /\x3e\n\x3clink rel\x3d\x22service.post\x22 type\x3d\x22application/atom+xml\x22 title\x3d\x22FB MAC \u53f0\u5317 - Atom\x22 href\x3d\x22https://www.blogger.com/feeds/7016785836288137597/posts/default\x22 /\x3e\n', 'meTag': '\x3clink rel\x3d\x22me\x22 href\x3d\x22https://www.blogger.com/profile/14581104808337447386\x22 /\x3e\n', 'adsenseHostId': 'ca-host-pub-1556223355139109', 'adsenseHasAds': false, 'adsenseAutoAds': false, 'boqCommentIframeForm': true, 'loginRedirectParam': '', 'view': '', 'dynamicViewsCommentsSrc': '//www.blogblog.com/dynamicviews/4224c15c4e7c9321/js/comments.js', 'dynamicViewsScriptSrc': '//www.blogblog.com/dynamicviews/ad07a4148a3f0038', 'plusOneApiSrc': 'https://apis.google.com/js/platform.js', 'disableGComments': true, 'interstitialAccepted': false, 'sharing': {'platforms': [{'name': 'Get link', 'key': 'link', 'shareMessage': 'Get link', 'target': ''}, {'name': 'Facebook', 'key': 'facebook', 'shareMessage': 'Share to Facebook', 'target': 'facebook'}, {'name': 'BlogThis!', 'key': 'blogThis', 'shareMessage': 'BlogThis!', 'target': 'blog'}, {'name': 'Twitter', 'key': 'twitter', 'shareMessage': 'Share to Twitter', 'target': 'twitter'}, {'name': 'Pinterest', 'key': 'pinterest', 'shareMessage': 'Share to Pinterest', 'target': 'pinterest'}, {'name': 'Email', 'key': 'email', 'shareMessage': 'Email', 'target': 'email'}], 'disableGooglePlus': true, 'googlePlusShareButtonWidth': 0, 'googlePlusBootstrap': '\x3cscript type\x3d\x22text/javascript\x22\x3ewindow.___gcfg \x3d {\x27lang\x27: \x27en\x27};\x3c/script\x3e'}, 'hasCustomJumpLinkMessage': false, 'jumpLinkMessage': 'Read more', 'pageType': 'index', 'pageName': '', 'pageTitle': 'FB MAC \u53f0\u5317'}}, {'name': 'features', 'data': {}}, {'name': 'messages', 'data': {'edit': 'Edit', 'linkCopiedToClipboard': 'Link copied to clipboard!', 'ok': 'Ok', 'postLink': 'Post Link'}}, {'name': 'template', 'data': {'name': 'custom', 'localizedName': 'Custom', 'isResponsive': false, 'isAlternateRendering': false, 'isCustom': true}}, {'name': 'view', 'data': {'classic': {'name': 'classic', 'url': '?view\x3dclassic'}, 'flipcard': {'name': 'flipcard', 'url': '?view\x3dflipcard'}, 'magazine': {'name': 'magazine', 'url': '?view\x3dmagazine'}, 'mosaic': {'name': 'mosaic', 'url': '?view\x3dmosaic'}, 'sidebar': {'name': 'sidebar', 'url': '?view\x3dsidebar'}, 'snapshot': {'name': 'snapshot', 'url': '?view\x3dsnapshot'}, 'timeslide': {'name': 'timeslide', 'url': '?view\x3dtimeslide'}, 'isMobile': false, 'title': 'FB MAC \u53f0\u5317', 'description': '', 'url': 'https://music.wfuapp.com/', 'type': 'feed', 'isSingleItem': false, 'isMultipleItems': true, 'isError': false, 'isPage': false, 'isPost': false, 'isHomepage': true, 'isArchive': false, 'isLabelSearch': false}}]);
 _WidgetManager._RegisterWidget('_NavbarView', new _WidgetInfo('Navbar1', 'navbar', document.getElementById('Navbar1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_HeaderView', new _WidgetInfo('Header1', 'header', document.getElementById('Header1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', document.getElementById('Blog1'), {'cmtInteractionsEnabled': false}, 'displayModeFull'));
